--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -85,7 +85,8 @@
                         <p:selectBooleanCheckbox id="nieliczFP1" value="#{umowaView.selected.nieliczFP}" />
                     </p:panelGrid>-->
                     <p:panelGrid columns="2">
-
+                        <h:outputText value="W przypadku przedłużenia umowy bez zmiany składników" style="color: green;"/>
+                        <h:outputText value=" nie wypełniac kwot wynagrodzenia" style="color: green;"/>
                         <p:outputLabel value="wynagrodzenie miesięczne" />
                         <bcf:innum value="#{umowaView.selected.wynagrodzeniemiesieczne}"/>
                         <p:outputLabel value="wynagrodzenie godzinowe" />
