--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -142,7 +142,8 @@
                                  style="height: 450px; overflow-y: scroll;"
                                  emptyMessage="Nie wpisano żadnych nieobecności"
                                  >
-                        <p:column width="40" style="text-align: center;">
+                        <p:column width="20" selectionMode="multiple" selectRow="true" style="text-align: center;"/>
+                        <p:column width="20" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="id"/>
                             </f:facet>
@@ -287,8 +288,11 @@
                             </p:commandButton>
                         </p:column>
                     </p:dataTable>
+                    <p:panelGrid columns="2">
                     <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.nieniesnakalendarz()}" value="nanieś na kal." 
                                      update="NieobecnoscListForm:datalist KalendarzmiesiacCreateForm KalendarzmiesiacListForm KalendarzmiesiacListForm:datalist KalendarzmiesiacCreateForm KalendarzmiesiacCreateRokForm @(.urlopnizostalo) NieobecnoscListForm"/>
+                    <p:commandButton styleClass="buttonnorm2" actionListener="#{nieobecnoscView.drukujnieobecnosci()}" value="drukuj" />
+                    </p:panelGrid>
                 </p:panel>
             </h:form>
         </p:outputPanel>
