--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -487,10 +487,10 @@
                     <p:column headerText="wykorzyst. bieżące" width="90">
                         <bcf:outputpl value="#{loop.sumabiezace}"/>
                     </p:column>
-                    <p:column headerText="proc./rok" width="90">
+                    <p:column headerText=zostało" width="90">
                         <bcf:outputpl value="#{loop.zostalo}"/>
                     </p:column>
-                    <p:column headerText="zostało" style="text-align: center;">
+                    <p:column headerText="proc./rok" style="text-align: center;">
                          <p:inputNumber id="sumbrutto" value="#{loop.limitroczny}"  required="true" requiredMessage="Brak procentu - uzupełnij" size="6"
                                         style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="0" minValue="0" styleClass="wiersznetto"/> 
                     </p:column>
