--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -487,12 +487,14 @@
                     <p:column headerText="wykorzyst. bieżące" width="90">
                         <bcf:outputpl value="#{loop.sumabiezace}"/>
                     </p:column>
-                    <p:column headerText=zostało" width="90">
+                    <p:column headerText="zostało" width="90">
                         <bcf:outputpl value="#{loop.zostalo}"/>
                     </p:column>
                     <p:column headerText="proc./rok" style="text-align: center;">
                          <p:inputNumber id="sumbrutto" value="#{loop.limitroczny}"  required="true" requiredMessage="Brak procentu - uzupełnij" size="6"
-                                        style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="0" minValue="0" styleClass="wiersznetto"/> 
+                                        style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="0" minValue="0" styleClass="wiersznetto"> 
+                             <p:ajax event="change" listener="#{strataView.editstrate(loop)}"/>
+                         </p:inputNumber>
                     </p:column>
                     <p:column headerText="usuń" width="50" style="text-align: center;">
                         <p:commandButton icon="ui-icon-trash" actionListener="#{strataView.usunstrate(loop)}" update="akordeon:form1:tabelastrat"/>
@@ -522,6 +524,9 @@
                                 <p:column>
                                     <h:outputText value="kwota"/>
                                 </p:column>
+                                <p:column>
+                                    <h:outputText value="proc./rok"/>
+                                </p:column>
                             </p:row>
                         </f:facet>
                         <p:row>
@@ -531,6 +536,11 @@
                             <p:column>
                                 <bcf:innum value="#{strataView.selected.kwota}"/>
                             </p:column>
+                            <p:column>
+                            <p:inputNumber id="sumbrutto" value="#{strataView.selected.limitroczny}"  required="true" requiredMessage="Brak procentu - uzupełnij" size="6"
+                                        style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="0" minValue="0" styleClass="wiersznetto"> 
+                            </p:inputNumber>
+                                </p:column>
                         </p:row>
                     </p:panelGrid>
                 </p:focus>
