--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
@@ -24,9 +24,9 @@
                             <p:outputLabel value="rok rozliczeniowy" for="urloprok" />
                             <p:inputText id="urloprok" value="#{pracownikNieobecnoscView.urlopprezentacja.rok}" readonly="true"/>
                             <p:outputLabel value="zaległe/przeniesione godziny " for="urloplp" />
-                            <p:inputNumber id="urloplp" value="#{pracownikNieobecnoscView.urlopprezentacja.okrespoprzedni}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
+                            <p:inputNumber id="urloplp" value="#{pracownikNieobecnoscView.urlopprezentacja.bilansotwarciagodziny}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                             <p:outputLabel value="wymiar godzin rok bieżący" for="urloplp1" />
-                            <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.urlopprezentacja.wymiarokresbiezacy}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
+                            <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.urlopprezentacja.wymiarokresbiezacygodziny}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                         </p:panelGrid>
                         <p:dataTable id="datalist" value="#{pracownikNieobecnoscView.urlopprezentacja.nieobecnoscwykorzystanieList}" var="urlopwykorzystanie"
                                      rowKey="#{urlopwykorzystanie.id}" emptyMessage="brak urlopu w roku bieżącym" rowIndexVar="indexurlop"
@@ -250,9 +250,9 @@
                             <p:outputLabel value="rok rozliczeniowy" for="urloprok" />
                             <p:inputText id="urloprok" value="#{pracownikNieobecnoscView.chorobaprezentacja.rok}" readonly="true"/>
                             <p:outputLabel value="zaległy rok uprzedni" for="urloplp" />
-                            <p:inputNumber id="urloplp" value="#{pracownikNieobecnoscView.chorobaprezentacja.okrespoprzedni}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
+                            <p:inputNumber id="urloplp" value="#{pracownikNieobecnoscView.chorobaprezentacja.bilansotwarciagodziny}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                             <p:outputLabel value="wymiar rok bieżący" for="urloplp1" />
-                            <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.chorobaprezentacja.wymiarokresbiezacy}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
+                            <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.chorobaprezentacja.wymiarokresbiezacygodziny}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                         </p:panelGrid>
                         <p:dataTable id="datalist" value="#{pracownikNieobecnoscView.chorobaprezentacja.nieobecnoscwykorzystanieList}" var="chorobawykorzystanie"
                                      rowKey="#{chorobawykorzystanie.id}" emptyMessage="brak choroby w roku bieżącym" rowIndexVar="indexchoroba"
@@ -328,9 +328,9 @@
                             <p:outputLabel value="rok rozliczeniowy" for="urloprokz" />
                             <p:inputText id="urloprokz" value="#{pracownikNieobecnoscView.zasilekprezentacja.rok}" readonly="true"/>
                             <p:outputLabel value="zaległy rok uprzedni" for="urloplpz" />
-                            <p:inputNumber id="urloplpz" value="#{pracownikNieobecnoscView.zasilekprezentacja.okrespoprzedni}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
+                            <p:inputNumber id="urloplpz" value="#{pracownikNieobecnoscView.zasilekprezentacja.bilansotwarciagodziny}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                             <p:outputLabel value="wymiar rok bieżący" for="urloplp1z" />
-                            <p:inputNumber id="urloplp1z" value="#{pracownikNieobecnoscView.zasilekprezentacja.wymiarokresbiezacy}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
+                            <p:inputNumber id="urloplp1z" value="#{pracownikNieobecnoscView.zasilekprezentacja.wymiarokresbiezacygodziny}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>
                         </p:panelGrid>
                         <p:dataTable id="datalist" value="#{pracownikNieobecnoscView.zasilekprezentacja.nieobecnoscwykorzystanieList}" var="zasilekwykorzystanie"
                                      rowKey="#{zasilekwykorzystanie.id}" emptyMessage="brak zasiłków w roku bieżącym" rowIndexVar="indexzasilek"
@@ -406,9 +406,9 @@
                             <p:outputLabel value="rok rozliczeniowy" for="urloprok" />
                             <p:inputText id="urloprok" value="#{pracownikNieobecnoscView.oddelegowanieprezentacja.rok}" readonly="true"/>
 <!--                            <p:outputLabel value="zaległy rok uprzedni" for="urloplp" />
-                            <p:inputNumber id="urloplp" value="#{pracownikNieobecnoscView.oddelegowanieprezentacja.okrespoprzedni}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>-->
+                            <p:inputNumber id="urloplp" value="#{pracownikNieobecnoscView.oddelegowanieprezentacja.bilansotwarciagodziny}"  size="5"  maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>-->
 <!--                            <p:outputLabel value="ilośc dni rok bieżący" for="urloplp1" />
-                            <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.oddelegowanieprezentacja.wymiarokresbiezacy}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>-->
+                            <p:inputNumber id="urloplp1" value="#{pracownikNieobecnoscView.oddelegowanieprezentacja.wymiarokresbiezacygodziny}"  size="5" maxlength="3" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right"/>-->
                         </p:panelGrid>
                         <p:dataTable id="datalist" value="#{pracownikNieobecnoscView.oddelegowanieprezentacja.nieobecnoscwykorzystanieList}" var="oddelegowanie"
                                      rowKey="#{oddelegowanie.id}" emptyMessage="brak oddelegowania w roku bieżącym" rowIndexVar="indexoddelegowanie"
