naprwawiono po raz kolejny nieszczesne rozwiazania i swiadectwo teraz w swiadectwie wyswietla tyko ni z tego roku

--- a/kadry/src/main/webapp/template.xhtml
+++ b/kadry/src/main/webapp/template.xhtml
@@ -51,11 +51,11 @@
                     <ui:insert name="content">Content</ui:insert>
                 </p:outputPanel>
             </div>
-            <div id="bottom"  class="col-12  card  blue-container flex align-items-center">
+<!--            <div id="bottom"  class="col-12  card  blue-container flex align-items-center">
                 <p:outputPanel class="col-12 bg-bluegray-100 text-1xl flex-auto text-center align-items-center font-bold p-1 border-round mb-3 h-3rem"  style="box-shadow: 10px 10px 5px #888;bottom: 0;position: absolute;width: 99%;">
                      <ui:include src="south.xhtml"/>
                 </p:outputPanel>
-            </div>
+            </div>-->
         </div>
     </h:body>
 
