--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
@@ -9,11 +9,22 @@
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
         <p:outputPanel>
             <h:form styleClass="formumowa" id="SwiadectwoForm">
+                 
                 <p:panel header="Zestawienie danych do świadectwa">
+                    <p:panelGrid columns="2" style="width: 340px;">
+                           <p:outputLabel value="niewykorzystany rok poprzedni godz." for="urloplpop" />
+                           <h:outputText id="urloplpop" value="#{rozwiazanieumowyView.urlopprezentacja.bilansotwarciagodziny}"  style="text-align: right;"/>
+                            <p:outputLabel value="wykorzystany urlop w roku bieżący godz." for="urloplp1e" />
+                            <h:outputText id="urloplp1e" value="#{rozwiazanieumowyView.urlopprezentacja.wykorzystanierokbiezacy}" style="text-align: right;"/>
+                            <p:outputLabel value="godziny urlopu tylko z wymiaru roku bieżącego" for="urloplpop1" />
+                            <h:outputText id="urloplpop1" value="#{rozwiazanieumowyView.urlopprezentacja.doswiadectwagodziny}"  style="text-align: right;"/>
+                            <p:outputLabel value="dni urlopu tylko z wymiaru roku bieżącego" for="urloplpop1a" />
+                            <h:outputText id="urloplpop1a" value="#{rozwiazanieumowyView.urlopprezentacja.doswiadectwadni}" style="text-align: right;" />
+                    </p:panelGrid>
                     <p:dataTable id="datalist" value="#{rozwiazanieumowyView.dnidoswiadectwa}" var="itemsw"
                                  selectionMode="single" selection="#{rozwiazanieumowyView.selected}" rowIndexVar="itemswin"
                                  rowKey="#{itemsw.id}" emptyMessage="Brak sporządzonych rozwiązań umowy"
-                                 style="width: 950px;height: 550px; overflow-y: scroll;"
+                                 style="width: 950px;height: 550px; overflow-y: scroll;margin-top: 20px;"
                                  >
                         <p:ajax event="rowSelect" partialSubmit="true" global="false" />
                         <p:column width="20" style="text-align: center;">
