--- a/kadry/src/main/webapp/umowa/sub/dane1_umowa_rozwiazanie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_umowa_rozwiazanie.xhtml
@@ -15,8 +15,10 @@
                              rowKey="#{itemumowawy.id}" sortBy="#{itemumowawy.dataod}" sortMode="single"
                              style="height: 220px; overflow-y: scroll; width: 1720px;"
                              >
-                    <p:ajax event="rowSelect" listener="#{rozwiazanieumowyView.pobierzRozwiazanie()}" update="akordeon:RozwiazaniaNowyForm akordeon:RozwiazaniaListForm akordeon:SwiadectwoForm" partialSubmit="true" global="false" />
-                    <p:ajax event="rowSelectRadio" listener="#{rozwiazanieumowyView.pobierzRozwiazanie()}" update="akordeon:RozwiazaniaNowyForm akordeon:RozwiazaniaListForm akordeon:SwiadectwoForm"  partialSubmit="true" global="false"/>
+                    <p:ajax event="rowSelect" listener="#{rozwiazanieumowyView.pobierzRozwiazanie()}" 
+                            update="akordeon:RozwiazaniaNowyForm akordeon:RozwiazaniaListForm akordeon:SwiadectwoForm akordeon:SwiadectwoWydrukForm" partialSubmit="true" global="false" />
+                    <p:ajax event="rowSelectRadio" listener="#{rozwiazanieumowyView.pobierzRozwiazanie()}" 
+                            update="akordeon:RozwiazaniaNowyForm akordeon:RozwiazaniaListForm akordeon:SwiadectwoForm akordeon:SwiadectwoWydrukForm"  partialSubmit="true" global="false"/>
                     <p:column width="40" selectionMode="single" selectRow="true" style="text-align: center;"/>
                     <p:column width="80" style="text-align: center;">
                         <f:facet name="header">
